src/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> externs
Rule 2     externs -> <empty>
Rule 3     externs -> externs extern
Rule 4     extern -> dcl ;
Rule 5     extern -> func
Rule 6     dcls -> <empty>
Rule 7     dcls -> dcls dcl ;
Rule 8     dcl -> type dclr
Rule 9     dcl -> dcl , dclr
Rule 10    dclr -> ID
Rule 11    dclr -> ID [ ]
Rule 12    dclr -> ID [ ICON ]
Rule 13    type -> CHAR
Rule 14    type -> FLOAT
Rule 15    type -> DOUBLE
Rule 16    type -> INT
Rule 17    func -> fhead stmts }
Rule 18    fhead -> fname fargs { dcls
Rule 19    fname -> type ID
Rule 20    fname -> ID
Rule 21    fargs -> ( )
Rule 22    fargs -> ( args )
Rule 23    args -> type dclr
Rule 24    args -> args , type dclr
Rule 25    block -> { stmts }
Rule 26    stmts -> <empty>
Rule 27    stmts -> stmts stmt
Rule 28    stmt -> expr ;
Rule 29    stmt -> IF ( cexpr ) stmt
Rule 30    stmt -> IF ( cexpr ) stmt ELSE stmt
Rule 31    stmt -> WHILE ( cexpr ) stmt
Rule 32    stmt -> DO stmt WHILE ( cexpr ) ;
Rule 33    stmt -> FOR ( expro ; cexpro ; expro ) stmt
Rule 34    stmt -> CONTINUE ;
Rule 35    stmt -> BREAK ;
Rule 36    stmt -> RETURN ;
Rule 37    stmt -> RETURN expr ;
Rule 38    stmt -> block
Rule 39    stmt -> ;
Rule 40    cexpro -> <empty>
Rule 41    cexpro -> cexpr
Rule 42    cexpr -> expr EQ expr
Rule 43    cexpr -> expr NEQ expr
Rule 44    cexpr -> expr LEQ expr
Rule 45    cexpr -> expr GEQ expr
Rule 46    cexpr -> expr < expr
Rule 47    cexpr -> expr > expr
Rule 48    cexpr -> cexpr LAND cexpr
Rule 49    cexpr -> cexpr LOR cexpr
Rule 50    cexpr -> ! cexpr
Rule 51    cexpr -> expr
Rule 52    exprs -> expr
Rule 53    exprs -> exprs , expr
Rule 54    expro -> <empty>
Rule 55    expro -> expr
Rule 56    expr -> lval = expr
Rule 57    expr -> lval ADDEQ expr
Rule 58    expr -> lval SUBEQ expr
Rule 59    expr -> lval MULEQ expr
Rule 60    expr -> lval DIVEQ expr
Rule 61    expr -> lval MODEQ expr
Rule 62    expr -> expr + expr
Rule 63    expr -> expr - expr
Rule 64    expr -> expr * expr
Rule 65    expr -> expr / expr
Rule 66    expr -> expr % expr
Rule 67    expr -> expr LSHIFT expr
Rule 68    expr -> expr RSHIFT expr
Rule 69    expr -> ID ( )
Rule 70    expr -> ID ( exprs )
Rule 71    expr -> & lval
Rule 72    expr -> - expr
Rule 73    expr -> lval
Rule 74    expr -> ( expr )
Rule 75    expr -> constant
Rule 76    lval -> ID
Rule 77    lval -> ID [ expr ]
Rule 78    constant -> SCON
Rule 79    constant -> ICON
Rule 80    constant -> CCON
Rule 81    constant -> FCON

Terminals, with rules where they appear

!                    : 50
%                    : 66
&                    : 71
(                    : 21 22 29 30 31 32 33 69 70 74
)                    : 21 22 29 30 31 32 33 69 70 74
*                    : 64
+                    : 62
,                    : 9 24 53
-                    : 63 72
/                    : 65
;                    : 4 7 28 32 33 33 34 35 36 37 39
<                    : 46
=                    : 56
>                    : 47
ADDEQ                : 57
BREAK                : 35
CCON                 : 80
CHAR                 : 13
CONTINUE             : 34
DIVEQ                : 60
DO                   : 32
DOUBLE               : 15
ELSE                 : 30
EQ                   : 42
FCON                 : 81
FLOAT                : 14
FOR                  : 33
GEQ                  : 45
ICON                 : 12 79
ID                   : 10 11 12 19 20 69 70 76 77
IF                   : 29 30
INT                  : 16
LAND                 : 48
LEQ                  : 44
LOR                  : 49
LSHIFT               : 67
MODEQ                : 61
MULEQ                : 59
NEQ                  : 43
RETURN               : 36 37
RSHIFT               : 68
SCON                 : 78
SUBEQ                : 58
WHILE                : 31 32
[                    : 11 12 77
]                    : 11 12 77
error                : 
{                    : 18 25
}                    : 17 25

Nonterminals, with rules where they appear

args                 : 22 24
block                : 38
cexpr                : 29 30 31 32 41 48 48 49 49 50
cexpro               : 33
constant             : 75
dcl                  : 4 7 9
dclr                 : 8 9 23 24
dcls                 : 7 18
expr                 : 28 37 42 42 43 43 44 44 45 45 46 46 47 47 51 52 53 55 56 57 58 59 60 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 72 74 77
expro                : 33 33
exprs                : 53 70
extern               : 3
externs              : 1 3
fargs                : 18
fhead                : 17
fname                : 18
func                 : 5
lval                 : 56 57 58 59 60 61 71 73
prog                 : 0
stmt                 : 27 29 30 30 31 32 33
stmts                : 17 25 27
type                 : 8 19 23 24

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . externs
    (2) externs -> .
    (3) externs -> . externs extern

    CHAR            reduce using rule 2 (externs -> .)
    FLOAT           reduce using rule 2 (externs -> .)
    DOUBLE          reduce using rule 2 (externs -> .)
    INT             reduce using rule 2 (externs -> .)
    ID              reduce using rule 2 (externs -> .)
    $end            reduce using rule 2 (externs -> .)

    prog                           shift and go to state 1
    externs                        shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> externs .
    (3) externs -> externs . extern
    (4) extern -> . dcl ;
    (5) extern -> . func
    (8) dcl -> . type dclr
    (9) dcl -> . dcl , dclr
    (17) func -> . fhead stmts }
    (13) type -> . CHAR
    (14) type -> . FLOAT
    (15) type -> . DOUBLE
    (16) type -> . INT
    (18) fhead -> . fname fargs { dcls
    (19) fname -> . type ID
    (20) fname -> . ID

    $end            reduce using rule 1 (prog -> externs .)
    CHAR            shift and go to state 8
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 11
    INT             shift and go to state 9
    ID              shift and go to state 7

    fhead                          shift and go to state 3
    dcl                            shift and go to state 4
    fname                          shift and go to state 5
    func                           shift and go to state 10
    extern                         shift and go to state 12
    type                           shift and go to state 13

state 3

    (17) func -> fhead . stmts }
    (26) stmts -> .
    (27) stmts -> . stmts stmt

    }               reduce using rule 26 (stmts -> .)
    IF              reduce using rule 26 (stmts -> .)
    WHILE           reduce using rule 26 (stmts -> .)
    DO              reduce using rule 26 (stmts -> .)
    FOR             reduce using rule 26 (stmts -> .)
    CONTINUE        reduce using rule 26 (stmts -> .)
    BREAK           reduce using rule 26 (stmts -> .)
    RETURN          reduce using rule 26 (stmts -> .)
    ;               reduce using rule 26 (stmts -> .)
    ID              reduce using rule 26 (stmts -> .)
    &               reduce using rule 26 (stmts -> .)
    -               reduce using rule 26 (stmts -> .)
    (               reduce using rule 26 (stmts -> .)
    {               reduce using rule 26 (stmts -> .)
    SCON            reduce using rule 26 (stmts -> .)
    ICON            reduce using rule 26 (stmts -> .)
    CCON            reduce using rule 26 (stmts -> .)
    FCON            reduce using rule 26 (stmts -> .)

    stmts                          shift and go to state 14

state 4

    (4) extern -> dcl . ;
    (9) dcl -> dcl . , dclr

    ;               shift and go to state 15
    ,               shift and go to state 16


state 5

    (18) fhead -> fname . fargs { dcls
    (21) fargs -> . ( )
    (22) fargs -> . ( args )

    (               shift and go to state 18

    fargs                          shift and go to state 17

state 6

    (14) type -> FLOAT .

    ID              reduce using rule 14 (type -> FLOAT .)


state 7

    (20) fname -> ID .

    (               reduce using rule 20 (fname -> ID .)


state 8

    (13) type -> CHAR .

    ID              reduce using rule 13 (type -> CHAR .)


state 9

    (16) type -> INT .

    ID              reduce using rule 16 (type -> INT .)


state 10

    (5) extern -> func .

    CHAR            reduce using rule 5 (extern -> func .)
    FLOAT           reduce using rule 5 (extern -> func .)
    DOUBLE          reduce using rule 5 (extern -> func .)
    INT             reduce using rule 5 (extern -> func .)
    ID              reduce using rule 5 (extern -> func .)
    $end            reduce using rule 5 (extern -> func .)


state 11

    (15) type -> DOUBLE .

    ID              reduce using rule 15 (type -> DOUBLE .)


state 12

    (3) externs -> externs extern .

    CHAR            reduce using rule 3 (externs -> externs extern .)
    FLOAT           reduce using rule 3 (externs -> externs extern .)
    DOUBLE          reduce using rule 3 (externs -> externs extern .)
    INT             reduce using rule 3 (externs -> externs extern .)
    ID              reduce using rule 3 (externs -> externs extern .)
    $end            reduce using rule 3 (externs -> externs extern .)


state 13

    (8) dcl -> type . dclr
    (19) fname -> type . ID
    (10) dclr -> . ID
    (11) dclr -> . ID [ ]
    (12) dclr -> . ID [ ICON ]

    ID              shift and go to state 20

    dclr                           shift and go to state 19

state 14

    (17) func -> fhead stmts . }
    (27) stmts -> stmts . stmt
    (28) stmt -> . expr ;
    (29) stmt -> . IF ( cexpr ) stmt
    (30) stmt -> . IF ( cexpr ) stmt ELSE stmt
    (31) stmt -> . WHILE ( cexpr ) stmt
    (32) stmt -> . DO stmt WHILE ( cexpr ) ;
    (33) stmt -> . FOR ( expro ; cexpro ; expro ) stmt
    (34) stmt -> . CONTINUE ;
    (35) stmt -> . BREAK ;
    (36) stmt -> . RETURN ;
    (37) stmt -> . RETURN expr ;
    (38) stmt -> . block
    (39) stmt -> . ;
    (56) expr -> . lval = expr
    (57) expr -> . lval ADDEQ expr
    (58) expr -> . lval SUBEQ expr
    (59) expr -> . lval MULEQ expr
    (60) expr -> . lval DIVEQ expr
    (61) expr -> . lval MODEQ expr
    (62) expr -> . expr + expr
    (63) expr -> . expr - expr
    (64) expr -> . expr * expr
    (65) expr -> . expr / expr
    (66) expr -> . expr % expr
    (67) expr -> . expr LSHIFT expr
    (68) expr -> . expr RSHIFT expr
    (69) expr -> . ID ( )
    (70) expr -> . ID ( exprs )
    (71) expr -> . & lval
    (72) expr -> . - expr
    (73) expr -> . lval
    (74) expr -> . ( expr )
    (75) expr -> . constant
    (25) block -> . { stmts }
    (76) lval -> . ID
    (77) lval -> . ID [ expr ]
    (78) constant -> . SCON
    (79) constant -> . ICON
    (80) constant -> . CCON
    (81) constant -> . FCON

    }               shift and go to state 42
    IF              shift and go to state 34
    WHILE           shift and go to state 23
    DO              shift and go to state 21
    FOR             shift and go to state 30
    CONTINUE        shift and go to state 38
    BREAK           shift and go to state 37
    RETURN          shift and go to state 22
    ;               shift and go to state 28
    ID              shift and go to state 33
    &               shift and go to state 36
    -               shift and go to state 25
    (               shift and go to state 24
    {               shift and go to state 41
    SCON            shift and go to state 40
    ICON            shift and go to state 29
    CCON            shift and go to state 27
    FCON            shift and go to state 39

    constant                       shift and go to state 26
    expr                           shift and go to state 35
    stmt                           shift and go to state 32
    lval                           shift and go to state 31
    block                          shift and go to state 43

state 15

    (4) extern -> dcl ; .

    CHAR            reduce using rule 4 (extern -> dcl ; .)
    FLOAT           reduce using rule 4 (extern -> dcl ; .)
    DOUBLE          reduce using rule 4 (extern -> dcl ; .)
    INT             reduce using rule 4 (extern -> dcl ; .)
    ID              reduce using rule 4 (extern -> dcl ; .)
    $end            reduce using rule 4 (extern -> dcl ; .)


state 16

    (9) dcl -> dcl , . dclr
    (10) dclr -> . ID
    (11) dclr -> . ID [ ]
    (12) dclr -> . ID [ ICON ]

    ID              shift and go to state 45

    dclr                           shift and go to state 44

state 17

    (18) fhead -> fname fargs . { dcls

    {               shift and go to state 46


state 18

    (21) fargs -> ( . )
    (22) fargs -> ( . args )
    (23) args -> . type dclr
    (24) args -> . args , type dclr
    (13) type -> . CHAR
    (14) type -> . FLOAT
    (15) type -> . DOUBLE
    (16) type -> . INT

    )               shift and go to state 47
    CHAR            shift and go to state 8
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 11
    INT             shift and go to state 9

    args                           shift and go to state 48
    type                           shift and go to state 49

state 19

    (8) dcl -> type dclr .

    ;               reduce using rule 8 (dcl -> type dclr .)
    ,               reduce using rule 8 (dcl -> type dclr .)


state 20

    (19) fname -> type ID .
    (10) dclr -> ID .
    (11) dclr -> ID . [ ]
    (12) dclr -> ID . [ ICON ]

    (               reduce using rule 19 (fname -> type ID .)
    ;               reduce using rule 10 (dclr -> ID .)
    ,               reduce using rule 10 (dclr -> ID .)
    [               shift and go to state 50


state 21

    (32) stmt -> DO . stmt WHILE ( cexpr ) ;
    (28) stmt -> . expr ;
    (29) stmt -> . IF ( cexpr ) stmt
    (30) stmt -> . IF ( cexpr ) stmt ELSE stmt
    (31) stmt -> . WHILE ( cexpr ) stmt
    (32) stmt -> . DO stmt WHILE ( cexpr ) ;
    (33) stmt -> . FOR ( expro ; cexpro ; expro ) stmt
    (34) stmt -> . CONTINUE ;
    (35) stmt -> . BREAK ;
    (36) stmt -> . RETURN ;
    (37) stmt -> . RETURN expr ;
    (38) stmt -> . block
    (39) stmt -> . ;
    (56) expr -> . lval = expr
    (57) expr -> . lval ADDEQ expr
    (58) expr -> . lval SUBEQ expr
    (59) expr -> . lval MULEQ expr
    (60) expr -> . lval DIVEQ expr
    (61) expr -> . lval MODEQ expr
    (62) expr -> . expr + expr
    (63) expr -> . expr - expr
    (64) expr -> . expr * expr
    (65) expr -> . expr / expr
    (66) expr -> . expr % expr
    (67) expr -> . expr LSHIFT expr
    (68) expr -> . expr RSHIFT expr
    (69) expr -> . ID ( )
    (70) expr -> . ID ( exprs )
    (71) expr -> . & lval
    (72) expr -> . - expr
    (73) expr -> . lval
    (74) expr -> . ( expr )
    (75) expr -> . constant
    (25) block -> . { stmts }
    (76) lval -> . ID
    (77) lval -> . ID [ expr ]
    (78) constant -> . SCON
    (79) constant -> . ICON
    (80) constant -> . CCON
    (81) constant -> . FCON

    IF              shift and go to state 34
    WHILE           shift and go to state 23
    DO              shift and go to state 21
    FOR             shift and go to state 30
    CONTINUE        shift and go to state 38
    BREAK           shift and go to state 37
    RETURN          shift and go to state 22
    ;               shift and go to state 28
    ID              shift and go to state 33
    &               shift and go to state 36
    -               shift and go to state 25
    (               shift and go to state 24
    {               shift and go to state 41
    SCON            shift and go to state 40
    ICON            shift and go to state 29
    CCON            shift and go to state 27
    FCON            shift and go to state 39

    constant                       shift and go to state 26
    expr                           shift and go to state 35
    stmt                           shift and go to state 51
    lval                           shift and go to state 31
    block                          shift and go to state 43

state 22

    (36) stmt -> RETURN . ;
    (37) stmt -> RETURN . expr ;
    (56) expr -> . lval = expr
    (57) expr -> . lval ADDEQ expr
    (58) expr -> . lval SUBEQ expr
    (59) expr -> . lval MULEQ expr
    (60) expr -> . lval DIVEQ expr
    (61) expr -> . lval MODEQ expr
    (62) expr -> . expr + expr
    (63) expr -> . expr - expr
    (64) expr -> . expr * expr
    (65) expr -> . expr / expr
    (66) expr -> . expr % expr
    (67) expr -> . expr LSHIFT expr
    (68) expr -> . expr RSHIFT expr
    (69) expr -> . ID ( )
    (70) expr -> . ID ( exprs )
    (71) expr -> . & lval
    (72) expr -> . - expr
    (73) expr -> . lval
    (74) expr -> . ( expr )
    (75) expr -> . constant
    (76) lval -> . ID
    (77) lval -> . ID [ expr ]
    (78) constant -> . SCON
    (79) constant -> . ICON
    (80) constant -> . CCON
    (81) constant -> . FCON

    ;               shift and go to state 52
    ID              shift and go to state 33
    &               shift and go to state 36
    -               shift and go to state 25
    (               shift and go to state 24
    SCON            shift and go to state 40
    ICON            shift and go to state 29
    CCON            shift and go to state 27
    FCON            shift and go to state 39

    expr                           shift and go to state 53
    constant                       shift and go to state 26
    lval                           shift and go to state 31

state 23

    (31) stmt -> WHILE . ( cexpr ) stmt

    (               shift and go to state 54


state 24

    (74) expr -> ( . expr )
    (56) expr -> . lval = expr
    (57) expr -> . lval ADDEQ expr
    (58) expr -> . lval SUBEQ expr
    (59) expr -> . lval MULEQ expr
    (60) expr -> . lval DIVEQ expr
    (61) expr -> . lval MODEQ expr
    (62) expr -> . expr + expr
    (63) expr -> . expr - expr
    (64) expr -> . expr * expr
    (65) expr -> . expr / expr
    (66) expr -> . expr % expr
    (67) expr -> . expr LSHIFT expr
    (68) expr -> . expr RSHIFT expr
    (69) expr -> . ID ( )
    (70) expr -> . ID ( exprs )
    (71) expr -> . & lval
    (72) expr -> . - expr
    (73) expr -> . lval
    (74) expr -> . ( expr )
    (75) expr -> . constant
    (76) lval -> . ID
    (77) lval -> . ID [ expr ]
    (78) constant -> . SCON
    (79) constant -> . ICON
    (80) constant -> . CCON
    (81) constant -> . FCON

    ID              shift and go to state 33
    &               shift and go to state 36
    -               shift and go to state 25
    (               shift and go to state 24
    SCON            shift and go to state 40
    ICON            shift and go to state 29
    CCON            shift and go to state 27
    FCON            shift and go to state 39

    expr                           shift and go to state 55
    constant                       shift and go to state 26
    lval                           shift and go to state 31

state 25

    (72) expr -> - . expr
    (56) expr -> . lval = expr
    (57) expr -> . lval ADDEQ expr
    (58) expr -> . lval SUBEQ expr
    (59) expr -> . lval MULEQ expr
    (60) expr -> . lval DIVEQ expr
    (61) expr -> . lval MODEQ expr
    (62) expr -> . expr + expr
    (63) expr -> . expr - expr
    (64) expr -> . expr * expr
    (65) expr -> . expr / expr
    (66) expr -> . expr % expr
    (67) expr -> . expr LSHIFT expr
    (68) expr -> . expr RSHIFT expr
    (69) expr -> . ID ( )
    (70) expr -> . ID ( exprs )
    (71) expr -> . & lval
    (72) expr -> . - expr
    (73) expr -> . lval
    (74) expr -> . ( expr )
    (75) expr -> . constant
    (76) lval -> . ID
    (77) lval -> . ID [ expr ]
    (78) constant -> . SCON
    (79) constant -> . ICON
    (80) constant -> . CCON
    (81) constant -> . FCON

    ID              shift and go to state 33
    &               shift and go to state 36
    -               shift and go to state 25
    (               shift and go to state 24
    SCON            shift and go to state 40
    ICON            shift and go to state 29
    CCON            shift and go to state 27
    FCON            shift and go to state 39

    expr                           shift and go to state 56
    constant                       shift and go to state 26
    lval                           shift and go to state 31

state 26

    (75) expr -> constant .

    +               reduce using rule 75 (expr -> constant .)
    -               reduce using rule 75 (expr -> constant .)
    *               reduce using rule 75 (expr -> constant .)
    /               reduce using rule 75 (expr -> constant .)
    %               reduce using rule 75 (expr -> constant .)
    LSHIFT          reduce using rule 75 (expr -> constant .)
    RSHIFT          reduce using rule 75 (expr -> constant .)
    ;               reduce using rule 75 (expr -> constant .)
    )               reduce using rule 75 (expr -> constant .)
    EQ              reduce using rule 75 (expr -> constant .)
    NEQ             reduce using rule 75 (expr -> constant .)
    LEQ             reduce using rule 75 (expr -> constant .)
    GEQ             reduce using rule 75 (expr -> constant .)
    <               reduce using rule 75 (expr -> constant .)
    >               reduce using rule 75 (expr -> constant .)
    LAND            reduce using rule 75 (expr -> constant .)
    LOR             reduce using rule 75 (expr -> constant .)
    ,               reduce using rule 75 (expr -> constant .)
    ]               reduce using rule 75 (expr -> constant .)


state 27

    (80) constant -> CCON .

    EQ              reduce using rule 80 (constant -> CCON .)
    NEQ             reduce using rule 80 (constant -> CCON .)
    LEQ             reduce using rule 80 (constant -> CCON .)
    GEQ             reduce using rule 80 (constant -> CCON .)
    <               reduce using rule 80 (constant -> CCON .)
    >               reduce using rule 80 (constant -> CCON .)
    +               reduce using rule 80 (constant -> CCON .)
    -               reduce using rule 80 (constant -> CCON .)
    *               reduce using rule 80 (constant -> CCON .)
    /               reduce using rule 80 (constant -> CCON .)
    %               reduce using rule 80 (constant -> CCON .)
    LSHIFT          reduce using rule 80 (constant -> CCON .)
    RSHIFT          reduce using rule 80 (constant -> CCON .)
    LAND            reduce using rule 80 (constant -> CCON .)
    LOR             reduce using rule 80 (constant -> CCON .)
    )               reduce using rule 80 (constant -> CCON .)
    ;               reduce using rule 80 (constant -> CCON .)
    ]               reduce using rule 80 (constant -> CCON .)
    ,               reduce using rule 80 (constant -> CCON .)


state 28

    (39) stmt -> ; .

    }               reduce using rule 39 (stmt -> ; .)
    IF              reduce using rule 39 (stmt -> ; .)
    WHILE           reduce using rule 39 (stmt -> ; .)
    DO              reduce using rule 39 (stmt -> ; .)
    FOR             reduce using rule 39 (stmt -> ; .)
    CONTINUE        reduce using rule 39 (stmt -> ; .)
    BREAK           reduce using rule 39 (stmt -> ; .)
    RETURN          reduce using rule 39 (stmt -> ; .)
    ;               reduce using rule 39 (stmt -> ; .)
    ID              reduce using rule 39 (stmt -> ; .)
    &               reduce using rule 39 (stmt -> ; .)
    -               reduce using rule 39 (stmt -> ; .)
    (               reduce using rule 39 (stmt -> ; .)
    {               reduce using rule 39 (stmt -> ; .)
    SCON            reduce using rule 39 (stmt -> ; .)
    ICON            reduce using rule 39 (stmt -> ; .)
    CCON            reduce using rule 39 (stmt -> ; .)
    FCON            reduce using rule 39 (stmt -> ; .)
    ELSE            reduce using rule 39 (stmt -> ; .)


state 29

    (79) constant -> ICON .

    EQ              reduce using rule 79 (constant -> ICON .)
    NEQ             reduce using rule 79 (constant -> ICON .)
    LEQ             reduce using rule 79 (constant -> ICON .)
    GEQ             reduce using rule 79 (constant -> ICON .)
    <               reduce using rule 79 (constant -> ICON .)
    >               reduce using rule 79 (constant -> ICON .)
    +               reduce using rule 79 (constant -> ICON .)
    -               reduce using rule 79 (constant -> ICON .)
    *               reduce using rule 79 (constant -> ICON .)
    /               reduce using rule 79 (constant -> ICON .)
    %               reduce using rule 79 (constant -> ICON .)
    LSHIFT          reduce using rule 79 (constant -> ICON .)
    RSHIFT          reduce using rule 79 (constant -> ICON .)
    LAND            reduce using rule 79 (constant -> ICON .)
    LOR             reduce using rule 79 (constant -> ICON .)
    )               reduce using rule 79 (constant -> ICON .)
    ;               reduce using rule 79 (constant -> ICON .)
    ]               reduce using rule 79 (constant -> ICON .)
    ,               reduce using rule 79 (constant -> ICON .)


state 30

    (33) stmt -> FOR . ( expro ; cexpro ; expro ) stmt

    (               shift and go to state 57


state 31

    (56) expr -> lval . = expr
    (57) expr -> lval . ADDEQ expr
    (58) expr -> lval . SUBEQ expr
    (59) expr -> lval . MULEQ expr
    (60) expr -> lval . DIVEQ expr
    (61) expr -> lval . MODEQ expr
    (73) expr -> lval .

    =               shift and go to state 62
    ADDEQ           shift and go to state 61
    SUBEQ           shift and go to state 59
    MULEQ           shift and go to state 60
    DIVEQ           shift and go to state 63
    MODEQ           shift and go to state 58
    +               reduce using rule 73 (expr -> lval .)
    -               reduce using rule 73 (expr -> lval .)
    *               reduce using rule 73 (expr -> lval .)
    /               reduce using rule 73 (expr -> lval .)
    %               reduce using rule 73 (expr -> lval .)
    LSHIFT          reduce using rule 73 (expr -> lval .)
    RSHIFT          reduce using rule 73 (expr -> lval .)
    ;               reduce using rule 73 (expr -> lval .)
    )               reduce using rule 73 (expr -> lval .)
    EQ              reduce using rule 73 (expr -> lval .)
    NEQ             reduce using rule 73 (expr -> lval .)
    LEQ             reduce using rule 73 (expr -> lval .)
    GEQ             reduce using rule 73 (expr -> lval .)
    <               reduce using rule 73 (expr -> lval .)
    >               reduce using rule 73 (expr -> lval .)
    LAND            reduce using rule 73 (expr -> lval .)
    LOR             reduce using rule 73 (expr -> lval .)
    ,               reduce using rule 73 (expr -> lval .)
    ]               reduce using rule 73 (expr -> lval .)


state 32

    (27) stmts -> stmts stmt .

    }               reduce using rule 27 (stmts -> stmts stmt .)
    IF              reduce using rule 27 (stmts -> stmts stmt .)
    WHILE           reduce using rule 27 (stmts -> stmts stmt .)
    DO              reduce using rule 27 (stmts -> stmts stmt .)
    FOR             reduce using rule 27 (stmts -> stmts stmt .)
    CONTINUE        reduce using rule 27 (stmts -> stmts stmt .)
    BREAK           reduce using rule 27 (stmts -> stmts stmt .)
    RETURN          reduce using rule 27 (stmts -> stmts stmt .)
    ;               reduce using rule 27 (stmts -> stmts stmt .)
    ID              reduce using rule 27 (stmts -> stmts stmt .)
    &               reduce using rule 27 (stmts -> stmts stmt .)
    -               reduce using rule 27 (stmts -> stmts stmt .)
    (               reduce using rule 27 (stmts -> stmts stmt .)
    {               reduce using rule 27 (stmts -> stmts stmt .)
    SCON            reduce using rule 27 (stmts -> stmts stmt .)
    ICON            reduce using rule 27 (stmts -> stmts stmt .)
    CCON            reduce using rule 27 (stmts -> stmts stmt .)
    FCON            reduce using rule 27 (stmts -> stmts stmt .)


state 33
